[if/while-as] fix format

--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -11,6 +11,8 @@ Post-History: 12-Jun-2018
 Structure (from PEP-12)
 =======================
 
+Structure::
+
     First-Level Title
     =================
 
